<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Telepon">

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"/>

    <Button
        android:id="@+id/btnDialCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialcall"/>

    <Button
        android:id="@+id/btnListContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listcontact"/>


</LinearLayout>