<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Bluetooth">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"/>

        <Button
            android:id="@+id/btnOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/of"/>

        <Button
            android:id="@+id/btnList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"/>

        <Button
            android:id="@+id/btnVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

</LinearLayout>